# birdle

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO.md  README.md  pyproject.toml  render.yaml  vercel.json
.cursor/rules/: conventions.mdc  workflow.mdc
.github/workflows/: ci.yml
configs/: settings.example.env
configs/prompts/: identify_system.txt  identify_user.txt
docs/: TECHNICAL-OVERVIEW.md  conventions.md  deployment-guide.md  idea.md  iteration-1-summary.md  iteration-2-summary.md  iteration-2-test-plan.md  iteration-3-summary.md  iteration-4-summary.md  iteration-4-test-plan.md  iteration-5-summary.md  tasklist.md  vision.md  workflow.md
docs/adr/: adr-001-react-fastapi-mcp.md  adr-002-monorepo-structure.md  adr-003-openai-chatgpt-integration.md  adr-004-llm-monitoring-and-logging.md  adr-005-deployment-strategy.md  adr-006-configuration-management.md  adr-007-no-persistence-for-mvp.md  adr-008-stubbed-data-for-iteration-1.md  adr-009-pre-commit-hooks-for-code-quality.md  adr-010-github-actions-ci-pipeline.md  adr-011-type-aligned-schemas.md  adr-012-automated-testing-strategy.md  adr-013-strict-optional-type-checking.md  adr-014-mcp-stdio-for-ebird-integration.md  adr-015-llm-based-location-extraction.md  adr-016-llm-self-assessment-for-confidence.md  adr-017-structured-json-responses-from-openai.md  adr-018-ebird-link-fallback-strategy.md  adr-019-open-ended-location-extraction.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
prompts/: README.md
(+35 files in other folders)
